# fintech-data-platform

./: .gitignore  ARCHITECTURE.md  ASSUMPTIONS.md  COMPLIANCE.md  METHODOLOGY.md  README.md  WEEK_1_SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: security.yml  test.yml
docker/: Dockerfile  clickhouse_init.sql  compose.yml
src/: cli.py
src/audit/: encryption.py
src/pipeline/: consumer.py  models.py  orchestrator.py  transformer.py  writer.py
src/utils/: logging.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars
terraform/modules/clickhouse/: clickhouse_init.sh  main.tf  outputs.tf  variables.tf
terraform/modules/kafka/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_cli.py  test_consumer.py  test_encryption.py  test_integration.py  test_logging.py  test_models.py  test_orchestrator.py  test_placeholder.py  test_transformer.py  test_writer.py
